# LearnOpenGL-Mac

./: CG渲染光照.xmind  CG渲染过程 （基础）.xmind  CG渲染过程.xmind  CMakeLists.txt  README.md  camera.h  glad.c  shader_s.h  test1.cpp  test10_cube.fs  test10_light.fs  test10_materials.cpp  test11_cube.fs  test11_lightmaps.cpp  test12_assimp.cpp  test2_triangle.cpp  test3_shader.cpp  test3_shader.fs  test3_shader.vs  test4_shader.fs  test4_textures.cpp  test5_shader.fs  test5_transformation.cpp  test6_3Dcoord.cpp  test7_camera.cpp  test8_color.cpp  test9_cube.fs  test9_light.cpp
assimp/assimp/: mesh.h
glad/: glad.h
